--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="./about.html">About</a>
+                        <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./timeline.html">Timeline</a>
+                        <a class="nav-link" href="#timeline">Timeline</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./projects.html">Projects</a>
+                        <a class="nav-link" href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Newspaper</a>
@@ -109,7 +109,7 @@
                 </div>
             </div>
         </div>
-        <div class="content">
+        <div id="about">
             <h3 class="text-center pt-5">Hello guys!</h3>
             <p>Welcome to <strong>(project of)</strong> my personal blog. The proposal of this
                 blog is to post random things and personal interest, to train some techniques of web programming and
