adjust structure pages

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#timeline">Timeline</a>
+                        <a class="nav-link" href="./projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#projects">Projects</a>
+                        <a class="nav-link" href="#timeline">Timeline</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Newspaper</a>
@@ -40,7 +40,8 @@
             <a id="theme" class="px-4 ml-auto">
                 <i class="bi" onclick="toggleTheme()"></i>
             </a>
-            <a class="btn-secondary d-none d-lg-block rounded p-2" href="./docs/cv.pdf" download="thiego-moura-curriculo">
+            <a class="btn-secondary d-none d-lg-block rounded p-2" href="./docs/cv.pdf"
+                download="thiego-moura-curriculo">
                 <span>Download CV</span>
                 <i class="bi bi-cloud-download"></i>
             </a>
@@ -71,7 +72,8 @@
                     <i class="bi bi-envelope"></i>
                     <span>thi-ego@hotmail.com</span>
                 </a>
-                <a class="btn-secondary d-lg-none rounded p-2 mt-3" href="./docs/cv.pdf" download="thiego-moura-curriculo">
+                <a class="btn-secondary d-lg-none rounded p-2 mt-3" href="./docs/cv.pdf"
+                    download="thiego-moura-curriculo">
                     <span>Download CV</span>
                     <i class="bi bi-cloud-download"></i>
                 </a>
@@ -109,9 +111,8 @@
                 </div>
             </div>
         </div>
-        <div id="about">
-            <h3 class="text-center pt-5">Hello guys!</h3>
-            <p>Welcome to <strong>(project of)</strong> my personal blog. The proposal of this
+        <div id="about" class="my-5 p-3 card">
+            <p>Hello guys! Welcome to <strong>(project of)</strong> my personal blog. The proposal of this
                 blog is to post random things and personal interest, to train some techniques of web programming and
                 mainly to stimulate the learning of the English language,
                 therefore they are not as critical as the coherence of a beginner.</p>
@@ -186,7 +187,7 @@
                 </div>
             </div>
             <div class="text-center py-3">
-                <a href="http://" class="btn btn-secondary">
+                <a href="./projects.html" class="btn btn-secondary">
                     See all
                 </a>
             </div>
@@ -236,7 +237,8 @@
                     <div class="step-number">
                         <span class="data-step text-muted">2018</span>
                     </div>
-                    <p class="step-title">I decide to migrate to the area of software development and return to studies on programming.</p>
+                    <p class="step-title">I decide to migrate to the area of software development and return to studies
+                        on programming.</p>
                 </div>
             </div>
             <div class="card bg-light p-1 text-center">
@@ -289,7 +291,8 @@
                         <span class="data-step text-muted">2012</span>
                         <p>Federal Institute of Education, Science and Technology of Mato Grosso</p>
                     </div>
-                    <p class="step-title">Start the technical course in development. of systems integrated to High School.</p>
+                    <p class="step-title">Start the technical course in development. of systems integrated to High
+                        School.</p>
                 </div>
             </div>
             <div class="card bg-light p-1 text-center">
