finish adjust on layout and structure

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="theme-dark">
+<html lang="en" class="theme-dark">
 
 <head>
     <meta charset="utf-8">
@@ -15,7 +15,7 @@
 </head>
 
 <body class=" d-flex flex-column align-content-around">
-    <header>
+    <header class="position-fixed w-100">
         <nav class="container navbar navbar-expand-lg">
             <a class="navbar-brand" href="./index.html">
                 <img src="./img/logo.svg" alt="Logo" class="rounded logo">
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="#timeline">Timeline</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Newspaper</a>
+                        <a class="nav-link" href="#" disabled="true">Newspaper</a>
                     </li>
                 </ul>
             </div>
@@ -84,8 +84,8 @@
             <div class="col-md-3">
                 <span>HTML</span>
                 <div class="progress">
-                    <div class="progress-bar bg-dark" role="progressbar" style="width: 80%;" aria-valuenow="80"
-                        aria-valuemin="80" aria-valuemax="100">
+                    <div class="progress-bar bg-dark" role="progressbar" style="width: 95%;" aria-valuenow="95"
+                        aria-valuemin="95" aria-valuemax="100">
                     </div>
                 </div>
             </div>
@@ -194,17 +194,6 @@
         </div>
         <div id="timeline">
             <h3 class="title text-center py-3">Timeline</h3>
-            <!-- <ul class="text-center">
-                <li>2020.11 - Efetivado como Analista de Tecnologia. Usina Barralcool</li>
-                <li>2020 - Efetivado como Analista de Tecnologia. Usina Barralcool</li>
-                <li>2019 - Retomo os estudos a área de desenvolvimento de software</li>
-                <li>2018 - Efetivado como Assis. de Tecnologia. Usina Barralcool</li>
-                <li>2016 - Início do estágio em TI. Usina Barralcool</li>
-                <li>2015 - Ingresso na Universidade do Estado de Mato Grosso. Para cursa Ciência da Computação.</li>
-                <li>2015 - Concluo o ensino médio</li>
-                <li>2012 - Primeiro contato com computadores!</li>
-                <li>2012 - A developer was born!</li>
-            </ul> -->
             <div class="card bg-dark p-1 text-center">
                 <div class="step">
                     <div class="step-number">
