--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
                         <a class="nav-link" href="./projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#timeline">Timeline</a>
+                        <a class="nav-link" href="/index.html#timeline">Timeline</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Newspaper</a>
