--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <h4><strong>Thiego</strong> R. Moura</h4>
                 <ul class="list-unstyled">
                     <li>A Brazilian Software Developer 💻</li>
-                    <li>Computer Science Student 🧪</li>
+                    <li>Computer Scientist 🧪</li>
                 </ul>
                 <a href="http://github.com/thiegomoura" target="_blank">
                     <i class="bi bi-github"></i>
@@ -92,21 +92,21 @@
             <div class="col-md-3">
                 <span>CSS</span>
                 <div class="progress">
-                    <div class="progress-bar bg-dark" role="progressbar" style="width: 65%" aria-valuenow="65"
+                    <div class="progress-bar bg-dark" role="progressbar" style="width: 85%" aria-valuenow="65"
                         aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
             </div>
             <div class="col-md-3">
                 <span>Javascript</span>
                 <div class="progress">
-                    <div class="progress-bar bg-dark" role="progressbar" style="width: 75%" aria-valuenow="75"
+                    <div class="progress-bar bg-dark" role="progressbar" style="width: 99%" aria-valuenow="75"
                         aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
             </div>
             <div class="col-md-3">
                 <span>Typescript</span>
                 <div class="progress">
-                    <div class="progress-bar bg-dark" role="progressbar" style="width: 60%" aria-valuenow="60"
+                    <div class="progress-bar bg-dark" role="progressbar" style="width: 95%" aria-valuenow="60"
                         aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
             </div>
