feat: update index and footer

--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
                 </ul>
             </div>
         </div>
-        <section id="skills" class="pt-5">
+        <div id="about" class="my-4 p-3 card">
+            <p>Welcome to my personal blog project! I'm Thiego Moura, a backend developer specialized in Node.js, TypeScript, and cloud technologies. This space was created to share insights, experiments, and personal interests related to software development. It also serves as a hands-on environment to practice web technologies and improve my English communication skills. Thanks for stopping by and feel free to explore!</p>
+        </div>
+        <section id="skills" class="">
   <h3 class="title text-center pb-4">Skills</h3>
   <div class="row g-4">
     <!-- Linguagens -->
@@ -166,12 +169,7 @@
   </div>
 </section>
 
-        <div id="about" class="my-5 p-3 card">
-            <p>Hello guys! Welcome to <strong>(project of)</strong> my personal blog. The proposal of this
-                blog is to post random things and personal interest, to train some techniques of web programming and
-                mainly to stimulate the learning of the English language,
-                therefore they are not as critical as the coherence of a beginner.</p>
-        </div>
+        
         <div id="projects">
             <h3 class="title text-center pt-3">Projects</h3>
             <div class="row">
