--- a/projects.html
+++ b/projects.html
@@ -123,13 +123,13 @@
             </div>
         </div>
     </main>
-    <footer class="container d-flex flex-column">
-        <div class="text-center">
-            <img src="./img/logo-dark.svg" alt="Logo" class="rounded w-25">
-        </div>
-        <span class="text-muted">&copy; TM 2022 - All rights reserved.</span>
-    </footer>
 </body>
+    <footer class="footer mt-auto py-4 px-3 text-center">
+      <div class="container d-flex flex-column align-items-center">
+        <img src="./img/logo-dark.svg" alt="Logo TM" class="logo-footer mb-3" />
+        <span class="footer-text">&copy; TM 2025 – All rights reserved.</span>
+      </div>
+    </footer>
 <script src="./js/script.js"></script>
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
